--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,18 @@
     <string name="app_name">My Personal Finances</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="categories_array">
+        <item>Viagem</item>
+        <item>Saúde</item>
+        <item>Casa</item>
+        <item>Alimentação</item>
+        <item>Mercado</item>
+        <item>Transporte</item>
+        <item>Lazer</item>
+        <item>Salário</item>
+        <item>Bonificação</item>
+        <item>Economizei</item>
+        <item>Outros</item>
+    </string-array>
 </resources>
